--- a/jekyll/_sass/_base.scss
+++ b/jekyll/_sass/_base.scss
@@ -1,3 +1,9 @@
+//* {
+//  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+//  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+//  box-sizing: border-box;         /* Opera/IE 8+ */
+//}
+
 /**
  * Reset some basic elements
  */
@@ -35,9 +41,11 @@ p, blockquote, pre,
 ul, ol, dl, figure,
 %vertical-rhythm {
     margin-bottom: $spacing-unit / 2;
+
+    hr + & {
+        margin-top: $spacing-unit / 2;
+    }
 }
-
-
 
 /**
  * Images
