usa_presidential_election_2016: extra scaffolding files

--- a/jekyll/_sass/_base.scss
+++ b/jekyll/_sass/_base.scss
@@ -47,6 +47,17 @@ table,
         margin-top: $spacing-unit / 2;
     }
 }
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+
+    td, th {
+        marging: 0;
+        padding: 0.5em;
+        border: 1px solid black;
+    }
+}
+
 
 /**
  * Images
